tests/baselines/reference/objectLiteralFunctionArgContextualTyping2.errors.txt
tests/cases/compiler/objectLiteralFunctionArgContextualTyping2.ts(8,4): error TS2345: Argument of type '{ hello: number; }' is not assignable to parameter of type 'I2'.
  Property 'value' is missing in type '{ hello: number; }'.
tests/cases/compiler/objectLiteralFunctionArgContextualTyping2.ts(9,4): error TS2345: Argument of type '{ value: string; }' is not assignable to parameter of type 'I2'.
  Property 'doStuff' is missing in type '{ value: string; }'.
tests/cases/compiler/objectLiteralFunctionArgContextualTyping2.ts(10,4): error TS2345: Argument of type '{ value: string; what: number; }' is not assignable to parameter of type 'I2'.
  Property 'doStuff' is missing in type '{ value: string; what: number; }'.
tests/cases/compiler/objectLiteralFunctionArgContextualTyping2.ts(11,4): error TS2345: Argument of type '{ toString: (s: any) => any; }' is not assignable to parameter of type 'I2'.
  Property 'value' is missing in type '{ toString: (s: any) => any; }'.
tests/cases/compiler/objectLiteralFunctionArgContextualTyping2.ts(12,4): error TS2345: Argument of type '{ toString: (s: string) => string; }' is not assignable to parameter of type 'I2'.
  Property 'value' is missing in type '{ toString: (s: string) => string; }'.
tests/cases/compiler/objectLiteralFunctionArgContextualTyping2.ts(13,4): error TS2345: Argument of type '{ value: string; toString: (s: any) => any; }' is not assignable to parameter of type 'I2'.
  Property 'doStuff' is missing in type '{ value: string; toString: (s: any) => any; }'.


==== tests/cases/compiler/objectLiteralFunctionArgContextualTyping2.ts (6 errors) ====
    interface I2 {
        value: string;
        doStuff: (t: string) => string;
    }
    
    function f2(args: I2) { }
    
    f2({ hello: 1 }) 
       ~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ hello: number; }' is not assignable to parameter of type 'I2'.
!!! error TS2345:   Property 'value' is missing in type '{ hello: number; }'.
    f2({ value: '' })
       ~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ value: string; }' is not assignable to parameter of type 'I2'.
!!! error TS2345:   Property 'doStuff' is missing in type '{ value: string; }'.
    f2({ value: '', what: 1 }) 
       ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ value: string; what: number; }' is not assignable to parameter of type 'I2'.
!!! error TS2345:   Property 'doStuff' is missing in type '{ value: string; what: number; }'.
    f2({ toString: (s) => s }) 
       ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ toString: (s: any) => any; }' is not assignable to parameter of type 'I2'.
!!! error TS2345:   Property 'value' is missing in type '{ toString: (s: any) => any; }'.
    f2({ toString: (s: string) => s }) 
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ toString: (s: string) => string; }' is not assignable to parameter of type 'I2'.
!!! error TS2345:   Property 'value' is missing in type '{ toString: (s: string) => string; }'.
    f2({ value: '', toString: (s) => s.uhhh }) 
       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '{ value: string; toString: (s: any) => any; }' is not assignable to parameter of type 'I2'.
!!! error TS2345:   Property 'doStuff' is missing in type '{ value: string; toString: (s: any) => any; }'.